<resources>
    <string name="app_name">Zoomyn</string>
    <string name="camera">камера</string>
    <string name="library">галерея</string>
    <string name="game">сыграй!</string>
    <string name="filter">Фильтр</string>
    <string name="edit">Редактировать</string>
    <string name="undo">Отмена</string>
    <string name="filterNameFirst">Normal</string>
    <string name="turn">Поворот</string>
    <string name="scale">Масштаб</string>
    <string name="segmentation">Сегментация</string>
    <string name="retouch">Ретушь</string>
    <string name="cancel">Отмена</string>
    <string name="done">Готово</string>
    <string name="headerTurn">Поворот</string>
    <string name="nameOfFirstFilter">Black-White</string>
    <string name="nameOfSecondFilter">Negative</string>
    <string name="nameOfThirdFilter">Sepia</string>
    <string name="nameOfFourthFilter">Gray</string>
    <string name="nameOfSixthFilter">Blue</string>
    <string name="nameOfFifthFilter">Red</string>
    <string name="nameOfSeventhFilter">Green</string>
    <string name="nameOfEighthFilter">Yellow</string>
    <string name="nameOfNinthFilter">Magenta</string>
    <string name="nameOfTenthFilter">Cyan</string>
    <string name="nameOfNormalFilter">Normal</string>
    <string name="masking">Маскирование</string>
    <string name="bilinearTrilinearFiltering">Фильтрация</string>
    <string name="interpolation">Интерполяция</string>
    <string name="textRotationMode">Выберите режим поворота</string>
    <string name="nameFirstModeTurn">90°</string>
    <string name="nameOfSecondMode">Другой угол</string>
    <string name="clickTheButtonTurn">Нажмите, чтобы повернуть изображение</string>
    <string name="headerMasking">Нерезкое маскирование</string>
    <string name="textChooseParameters">Укажите три параметра для применения функции</string>
    <string name="radius">Радиус:</string>
    <string name="threshold">Порог:</string>
    <string name="amount">Эффект:</string>
    <string name="parametersForEdit">Выберите параметры редактирования</string>
    <string name="headerScale">Масштабирование</string>
    <string name="textModeTurn">Выберите режим поворота изображения</string>
    <string name="textModeScale">Выберите режим масштабирования</string>
</resources>
